# uuidof

./: Cargo.toml  README.md  uuidof
src/: main.rs
